--- a/examplee.html
+++ b/examplee.html
@@ -55,60 +55,113 @@
 </style>
 </head>
 <body>
+<!--
+Beklenen JSON veri yapısı (örnek):
+{
+  "profile": {
+    "fullName": "Kaan Alkan",
+    "title": "Software Developer",
+    "email": "example@mail.com",
+    "phone": "+90 538 039 60 32",
+    "location": "Eskişehir",
+    "summary": "I am a software developer with over 2 years..."
+  },
+  "experience": [
+    {
+      "position":"Software Developer",
+      "employer":"Evosoft",
+      "startDate":"06.2022",
+      "endDate":"Present",
+      "location":"Eskişehir",
+      "description":"Made Evolubult Mobil incl. its API...",
+      "responsibilities": ["End-to-end development of mobile apps using Flutter.", "Develop and maintain backend services using Golang."],
+      "tags":["Flutter","Dart","Golang","C#",".NET","Azure"]
+    }
+  ],
+  "education":[
+    {"degree":"Associate Degree, Mechanical Drawing and Construction","institution":"Eskişehir Osmangazi Üniversitesi","yearRange":"2020 - 2023"}
+  ],
+  "skills": {
+    "mobile_frontend":["Flutter","Dart","JavaScript"],
+    "backend":["Golang",".NET Core","C#","Node.js","Socket.io","Python","Flask"],
+    "databases":["MySQL","MSSQL","PostgreSQL","SQLite"],
+    "tools":["Git","Subversion","Xcode","CocoaPods","Docker"]
+  },
+  "languages":[{"name":"English","level":"Intermediate"},{"name":"Turkish","level":"Native"}]
+}
+-->
 
 <div class="container">
   <header class="header" role="banner">
-    <div class="name" value-of="fullName">Your Name</div>
-    <div class="title" value-of="title">Your Title</div>
+    <div class="name" >Your Name</div>
+    <div class="title" >Your Title</div>
     <div class="contact" aria-label="İletişim bilgileri">
-      <span value-of="email"><a href="mailto:example@mail.com">example@mail.com</a></span>
-      <span value-of="phone">+90 5xx xxx xx xx</span>
-      <span value-of="location">Şehir</span>
-      <span value-of="links"><!-- opsiyonel: LinkedIn | GitHub vb. --></span>
+      <span ikuruzum@gmail.com><a href="mailto:example@mail.com">example@mail.com</a></span>
+      <span +90 538 039 60 32>+90 5xx xxx xx xx</span>
+      <span Eskişehir>Şehir</span>
+      <span [
+  "LinkedIn",
+  "GitHub"
+]><!-- opsiyonel: LinkedIn | GitHub vb. --></span>
     </div>
 
-    <p class="summary" value-of="summary">
+    <p class="summary" >
       Kısa özetiniz buraya gelecek. (Örnek: I am a software developer with over 2 years of experience in the industry. On mobile, I focus mainly on Flutter development and support the Back-End space...) 
     </p>
   </header>
 
   <main class="main" role="main">
+    <!-- Sol sütun: Deneyim, Eğitim -->
     <div class="left-col">
+      <!-- Experience -->
       <section class="section" id="experience">
         <div class="section-title">
           <h2>Experience</h2>
         </div>
-        <div repeat-for="experience" class="experience-list">
+
+        <!-- data-foreach="experience" dizisini döndürecek şekilde tasarlandı -->
+        <div data-foreach="experience" class="experience-list">
           <article class="experience-item" aria-label="İş deneyimi">
             <div class="job-row">
               <div>
-                <div class="position" value-of="experience.position">Software Developer</div>
-                <div class="employer" value-of="experience.company">Evosoft</div>
+                <div class="position" >Software Developer</div>
+                <div class="employer" >Evosoft</div>
               </div>
               <div class="dates" aria-hidden="false">
-                <div value-of="experience.startDate">06.2022</div>
+                <div >06.2022</div>
                 <div> - </div>
-                <div value-of="experience.endDate">Present</div>
+                <div >Present</div>
               </div>
             </div>
-            <div class="description" value-of="experience.description">
+
+            <div class="description" >
               Pozisyon açıklaması veya kısa özet buraya gelecek.
             </div>
-            <ul class="responsibilities" value-of="experience.responsibilities">
+
+            <ul class="responsibilities" >
+              <!-- responsibilities array içindeki her madde için bir <li> oluşturun -->
               <li>Made Evolubult Mobil incl. its API - Which is a mobile part of cloud based CRM software Evolubult.</li>
+              <li>End-to-end development of mobile applications using Flutter, Dart and React-Native.</li>
             </ul>
+
+            <div class="tags" data-foreach="tags">
+              <span class="tag" >Flutter</span>
+              <span class="tag" >Golang</span>
+            </div>
           </article>
         </div>
       </section>
+
+      <!-- Education -->
       <section class="section" id="education">
         <div class="section-title">
           <h2>Education</h2>
         </div>
-        <div  class="education-list">
-          <div repeat-for="education" class="education-item">
-            <div class="degree" value-of="education.degree">Associate Degree, Mechanical Drawing and Construction</div>
-            <div class="institution" value-of="education.institution">Eskişehir Osmangazi Üniversitesi</div>
-            <div class="dates" value-of="education.yearRange">2020 - 2023</div>
+        <div data-foreach="education" class="education-list">
+          <div class="education-item">
+            <div class="degree" >Associate Degree, Mechanical Drawing and Construction</div>
+            <div class="institution" >Eskişehir Osmangazi Üniversitesi</div>
+            <div class="dates" >2020 - 2023</div>
           </div>
         </div>
       </section>
@@ -124,29 +177,29 @@
         <div class="skill-grid">
           <div class="skill-block">
             <div class="small-muted">Mobile / Front-End</div>
-            <div class="skill-list">
-              <div repeat-for="skills.mobile" class="tag" style="display:inline-block;margin-bottom:6px;">Flutter</div>
+            <div data-foreach="skills.mobile_frontend" class="skill-list">
+              <div  class="tag" style="display:inline-block;margin-bottom:6px;">Flutter</div>
             </div>
           </div>
 
           <div class="skill-block">
             <div class="small-muted">Back-End</div>
-            <div  class="skill-list">
-              <div repeat-for="skills.backend" class="tag" style="display:inline-block;margin-bottom:6px;">Golang</div>
+            <div data-foreach="skills.backend" class="skill-list">
+              <div  class="tag" style="display:inline-block;margin-bottom:6px;">Golang</div>
             </div>
           </div>
 
           <div class="skill-block">
             <div class="small-muted">Database</div>
-            <div  class="skill-list">
-              <div repeat-for="skills.databases" class="tag" style="display:inline-block;margin-bottom:6px;">MySQL</div>
+            <div data-foreach="skills.databases" class="skill-list">
+              <div  class="tag" style="display:inline-block;margin-bottom:6px;">MySQL</div>
             </div>
           </div>
 
           <div class="skill-block">
             <div class="small-muted">Tools</div>
-            <div class="skill-list">
-              <div repeat-for="skills.tools" class="tag" style="display:inline-block;margin-bottom:6px;">Docker</div>
+            <div data-foreach="skills.tools" class="skill-list">
+              <div  class="tag" style="display:inline-block;margin-bottom:6px;">Docker</div>
             </div>
           </div>
         </div>
@@ -155,23 +208,23 @@
       <section class="section" id="languages">
         <div class="section-title"><h2>Language</h2></div>
         <ul>
-          <li repeat-for="languages" style="margin-bottom:6px;"><strong value-of="name">English</strong> — <span value-of="level" class="small-muted">Intermediate</span></li>
+          <li data-foreach="languages" style="margin-bottom:6px;"><strong Kaan Alkan>English</strong> — <span  class="small-muted">Intermediate</span></li>
         </ul>
       </section>
 
       <section class="section" id="contact-brief">
         <div class="section-title"><h2>Contact</h2></div>
         <div class="small-muted">Email</div>
-        <div value-of="email">example@mail.com</div>
+        <div >example@mail.com</div>
         <div style="height:10px"></div>
         <div class="small-muted">Phone</div>
-        <div value-of="phone">+90 5xx xxx xx xx</div>
+        <div >+90 5xx xxx xx xx</div>
       </section>
     </aside>
   </main>
 
   <footer>
-    <div value-of="footer.note">Resume generated — customize as needed.</div>
+    <div >Resume generated — customize as needed.</div>
   </footer>
 </div>
 
