--- a/examples/template.html
+++ b/examples/template.html
@@ -12,7 +12,7 @@
     --page-bg:#fff;
     --max-width:820px;
   }
-  html,body{height:100%;background:var(--page-bg);margin:0;font-family: "Inter", "Segoe UI", Roboto, Arial, sans-serif;color:#111;}
+  html,body{height:100%;background:var(--page-bg);margin:0;font-family:"Inter","Segoe UI",Roboto,Arial,sans-serif;color:#111;}
   .container{max-width:var(--max-width);margin:24px auto;padding:32px;box-sizing:border-box;}
   .header{display:flex;flex-direction:column;align-items:center;text-align:center;padding-bottom:18px;border-bottom:1px solid #e6e6e6;}
   .name{font-size:36px;letter-spacing:6px;font-weight:700;margin:6px 0;color:var(--accent);}
@@ -21,32 +21,26 @@
   .contact a{color:inherit;text-decoration:none;border-bottom:1px dashed #ddd;padding-bottom:1px}
   .summary{margin-top:22px;font-size:14px;line-height:1.5;color:#222;max-width:760px;}
   .main{display:grid;grid-template-columns:1fr;gap:22px;margin-top:26px;}
-  /* Section */
   .section{padding:6px 0;}
   .section-title{display:flex;align-items:center;justify-content:space-between;margin-bottom:8px;}
   .section-title h2{font-size:13px;letter-spacing:2px;text-transform:uppercase;margin:0;color:var(--accent);border-bottom:2px solid #ddd;padding-bottom:6px;}
-  /* Experience */
-  .experience-item{margin-bottom:14px;padding-bottom:8px;border-bottom:1px dashed #f0f0f0;}
-  .job-row{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:10px;}
-  .position{font-weight:700;font-size:15px;color:#111;}
-  .employer{font-style:italic;color:var(--muted);font-size:13px;}
+  .experience-item,.project-item{margin-bottom:14px;padding-bottom:8px;border-bottom:1px dashed #f0f0f0;}
+  .job-row,.project-row{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:10px;}
+  .position,.project-title{font-weight:700;font-size:15px;color:#111;}
+  .employer,.project-role{font-style:italic;color:var(--muted);font-size:13px;}
   .dates{font-size:12px;color:var(--muted);}
   .description{margin:8px 0 6px 0;font-size:14px;color:#333;}
-  .responsibilities{margin:6px 0 8px 18px;}
-  .responsibilities li{margin-bottom:6px;font-size:14px;color:#333;}
+  .responsibilities,.project-details{margin:6px 0 8px 18px;}
+  .responsibilities li,.project-details li{margin-bottom:6px;font-size:14px;color:#333;}
   .tags{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px;}
   .tag{background:var(--tag-bg);padding:5px 10px;border-radius:999px;font-size:12px;color:#333;}
-  /* Education */
   .education-item{margin-bottom:10px;}
   .degree{font-weight:600;}
   .institution{color:var(--muted);font-size:13px;}
-  /* Tech & Languages */
   .skill-grid{display:flex;flex-wrap:wrap;gap:12px;}
   .skill-block{min-width:160px;}
   .small-muted{font-size:13px;color:var(--muted);margin-bottom:6px;}
-  /* Footer spacing */
   footer{margin-top:18px;color:var(--muted);font-size:12px;text-align:center;}
-  /* Responsive */
   @media(min-width:980px){
     .main{grid-template-columns: 2fr 1fr; gap:28px;}
     .left-col{padding-right:18px;border-right:1px solid #f2f2f2;}
@@ -55,7 +49,6 @@
 </style>
 </head>
 <body>
-
 <div class="container">
   <header class="header" role="banner">
     <div class="name" value-of="name"></div>
@@ -66,17 +59,14 @@
       <span value-of="location"></span>
       <div repeat-for="links"><span value-of="links.title"></span></div>
     </div>
-
-    <p class="summary" value-of="summary">
-    </p>
+    <p class="summary" value-of="summary"></p>
   </header>
 
   <main class="main" role="main">
     <div class="left-col">
+      <!-- EXPERIENCE -->
       <section class="section" id="experience">
-        <div class="section-title">
-          <h2>Experience</h2>
-        </div>
+        <div class="section-title"><h2>Experience</h2></div>
         <div repeat-for="experience" class="experience-list">
           <article class="experience-item" aria-label="İş deneyimi">
             <div class="job-row">
@@ -84,26 +74,45 @@
                 <div class="position" value-of="experience.position"></div>
                 <div class="employer" value-of="experience.company"></div>
               </div>
-              <div class="dates" aria-hidden="false">
+              <div class="dates">
                 <div value-of="experience.startDate"></div>
                 <div> - </div>
                 <div value-of="experience.endDate"></div>
               </div>
             </div>
-            <div class="description" value-of="experience.description">
-
-            </div>
+            <div class="description" value-of="experience.description"></div>
             <ul class="responsibilities" repeat-for="experience.responsibilities">
               <li value-of="experience.responsibilities"></li>
             </ul>
           </article>
         </div>
       </section>
-      <section class="section" id="education" if-exists="education">
-        <div class="section-title">
-          <h2>Education</h2>
+
+      <!-- PROJECTS -->
+      <section class="section" id="projects" if-exists="projects">
+        <div class="section-title"><h2>Projects</h2></div>
+        <div class="project-list" repeat-for="projects">
+          <article class="project-item" aria-label="Proje">
+            <div class="project-row">
+              <div class="project-title" value-of="projects.title"></div>
+              <div class="dates" value-of="projects.year"></div>
+            </div>
+            <div class="project-role" value-of="projects.role"></div>
+            <div class="description" value-of="projects.description"></div>
+            <ul class="project-details" repeat-for="projects.details">
+              <li value-of="projects.details"></li>
+            </ul>
+            <div class="tags" repeat-for="projects.tags">
+              <div class="tag" value-of="projects.tags"></div>
+            </div>
+          </article>
         </div>
-        <div  class="education-list">
+      </section>
+
+      <!-- EDUCATION -->
+      <section class="section" id="education" if-exists="education">
+        <div class="section-title"><h2>Education</h2></div>
+        <div class="education-list">
           <div repeat-for="education" class="education-item">
             <div class="degree" value-of="education.degree"></div>
             <div class="institution" value-of="education.institution"></div>
@@ -113,13 +122,10 @@
       </section>
     </div>
 
-    <!-- Sağ sütun: Teknik Yetenekler, Diller, İletişim (özet) -->
+    <!-- RIGHT COLUMN -->
     <aside class="right-col" role="complementary" if-exists="skills">
       <section class="section" id="technical-skills">
-        <div class="section-title">
-          <h2>Technical Skill</h2>
-        </div>
-
+        <div class="section-title"><h2>Technical Skill</h2></div>
         <div class="skill-grid">
           <div class="skill-block" if-exists="skills.mobile">
             <div class="small-muted">Mobile / Front-End</div>
@@ -127,21 +133,18 @@
               <div repeat-for="skills.mobile"><div value-of="skills.mobile" class="tag" style="display:inline-block;margin-bottom:6px;"></div></div>
             </div>
           </div>
-
           <div class="skill-block" if-exists="skills.backend">
             <div class="small-muted">Back-End</div>
-            <div  class="skill-list">
+            <div class="skill-list">
               <div repeat-for="skills.backend"><div value-of="skills.backend" class="tag" style="display:inline-block;margin-bottom:6px;"></div></div>
             </div>
           </div>
-
           <div class="skill-block" if-exists="skills.databases">
             <div class="small-muted">Database</div>
-            <div  class="skill-list">
+            <div class="skill-list">
               <div repeat-for="skills.databases"><div value-of="skills.databases" class="tag" style="display:inline-block;margin-bottom:6px;"></div></div>
             </div>
           </div>
-
           <div class="skill-block" if-exists="skills.tools">
             <div class="small-muted">Tools</div>
             <div class="skill-list">
@@ -154,7 +157,10 @@
       <section class="section" id="languages" if-exists="languages">
         <div class="section-title"><h2>Language</h2></div>
         <ul>
-          <li repeat-for="languages" style="margin-bottom:6px;"><strong value-of="languages.name"></strong> — <span value-of="languages.level" class="small-muted"></span></li>
+          <li repeat-for="languages" style="margin-bottom:6px;">
+            <strong value-of="languages.name"></strong> — 
+            <span value-of="languages.level" class="small-muted"></span>
+          </li>
         </ul>
       </section>
 
@@ -173,6 +179,5 @@
     <div value-of="footer.note">Resume generated — customize as needed.</div>
   </footer>
 </div>
-
 </body>
 </html>
